--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -9,8 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
+    - name: List out directory content
+      run: |
+          echo "Listing the contents of the GitHub workspace directory";
+          ls ${{ github.workspace }}
+          echo "Recursively listing all contents of the current directory";
+          ls -R
     - uses: actions/checkout@v2
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
